2006-10-18  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_popup): Minor cleanups

2006-10-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_popup, gtk_menu_popdown): Revert some maemo
	breakage back to upstream. Instead of _NET_WM_ACTIVE_WINDOW (which
	could be another process) as transient parent, use the toplevel of
	attached widget. This should work exactly the same for applications,
	and better for maemo-af-desktop menus. NB#43513

2006-10-11  Xan Lopez  <xan.lopez@nokia.com>

	* gtk/gtklabel.c (get_layout_location): 
	Don't use the wrap width for the label width unconditionally. NB#42621

2006-10-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_tap_and_hold_timeout,
	gtk_widget_tap_and_hold_button_press): Clean up some X specifics from
	pointer handling.

2006-10-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_focus_to_cursor): Ensure the cursor
	row is selected, also in multiple selection mode. NB#41981

2006-10-04  Xan Lopez  <xan.lopez@nokia.com>

	* gtk/gtkcellview.c (gtk_cell_view_class_init): Remove style_set method,
	seems to be a leftover from when the cellview was a !NO_WINDOW widget.

2006-10-03 Xan Lopez <xan.lopez@nokia.com> 

	* gtk/gtktreeview.c: (gtk_tree_view_size_request),
	(gtk_tree_view_size_allocate), (validate_visible_area),
	(do_validate_rows), (validate_rows), (validate_rows_handler):

	Revert fix for NB#3490, as it was causing unintended side effects.	

2006-10-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merged small fixes from upstream.

    2005-11-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_motion_resize_column): Another
	erroneous semicolon.

    2005-08-11  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate_columns): queue
	a draw for the entire widget if any column changes width. (Fixes